home page banner form spacing issue fixed in tab

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -355,6 +355,11 @@
       top: -70px;
     }
   }
+  .slider-block .block .slider-container{
+   @include breakpoint($tablet){
+    margin: 0 30px;
+   }
+  }
 }
 
 .header_banner{
